--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "game-week-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,14 @@
   "bugs": {
     "url": "https://github.com/johnflentri/game-week-server/issues"
   },
-  "homepage": "https://github.com/johnflentri/game-week-server#readme"
+  "homepage": "https://github.com/johnflentri/game-week-server#readme",
+  "description": "",
+  "dependencies": {
+    "bcrypt": "^4.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^7.18.2",
+    "sequelize": "^5.21.5"
+  }
 }
